#90 about us done for sv&ge final touches for other languages needed
git-svn-id: https://www.europeanalabs.eu/svn/europeana/trunk@964 3c7f12e8-d31e-4037-9ce9-7a8ea9e2c7c8

--- a/tools/multilingo/apps/multi_lingo/templates/pages/about_us.html
+++ b/tools/multilingo/apps/multi_lingo/templates/pages/about_us.html
@@ -111,8 +111,7 @@ within the European{% endblocktrans %}
 The European Commission's goal for Europeana is to make European information
 resources easier to use in an online environment. It will build on Europe's
 rich heritage, combining multicultural and multilingual environments with
-technological advances and new business models.
-{% endblocktrans %}</p>
+technological advances and new business models{% endblocktrans %}.</p>
 
 <p>
 {% blocktrans %}The Europeana prototype is the result of a 2-year project that began in July 2007.
@@ -125,7 +124,7 @@ European Commissioner for Information Society and Media{% endblocktrans %}.
 {% trans "as part of the" %}
 <a target="_blank"
 href="http://ec.europa.eu/information_society/activities/digital_libraries/index_en.htm">{% trans "i2010  policy" %}</a>.
-{% blocktrans %}Originally SUNE known as the European digital library network &ndash; EDLnet  &ndash;&nbsp;
+{% blocktrans %}Originally known as the European digital library network &ndash; EDLnet  &ndash;&nbsp;
 it is a partnership  of 100 representatives of heritage and knowledge
 organisations and IT  experts from throughout Europe.
 They contribute to the Work Packages that are solving the technical and
@@ -144,8 +143,8 @@ usability issues{% endblocktrans %}.</p>
 <p>
 {% trans "Overseeing the project is the" %}
 <a href="http://version1.europeana.eu/web/guest/edl-foundation/" target="_blank">EDL Foundation</a>,
-    {% blocktrans %}which includes key European  cultural heritage associations from the four
-    domains. The Foundation&rsquo;{% endblocktrans %}
+{% blocktrans %}which includes key European  cultural heritage associations from the four
+domains. The Foundation&rsquo;s{% endblocktrans %}
 <a href="http://version1.europeana.eu/c/document_library/get_file?uuid=8493d624-7b32-4a6a-8a41-0c765922874e&groupId=10602" target="_blank">{% trans "statutes" %}</a>
 {% trans "commit members to" %}:
 </p>
@@ -162,8 +161,7 @@ usability issues{% endblocktrans %}.</p>
 <a  name="technicalplans"/></a>
 <h2>{% trans "Technical plans" %}</h2>
 <p>
-{% blocktrans %}The development route, site architecture and technical specifications are all
-published as{% endblocktrans %}
+{% blocktrans %}The development route, site architecture and technical specifications are all published as{% endblocktrans %}
 <a href="http://version1.europeana.eu/web/europeana-project/documents/"
 target="_blank">{% trans "deliverable outcomes" %}</a>
 {% blocktrans %}of the project. After the launch of the Europeana prototype, the project's
