#90 more aboutus translations
git-svn-id: https://www.europeanalabs.eu/svn/europeana/trunk@968 3c7f12e8-d31e-4037-9ce9-7a8ea9e2c7c8

--- a/tools/multilingo/import/utils/templates/about_us.html
+++ b/tools/multilingo/import/utils/templates/about_us.html
@@ -40,7 +40,8 @@ Java Developer</a> and
 <p>
 {% trans "Here is a" %}
 <a href="partners.html">{% trans "list of the organisations" %}</a>
-{% blocktrans %}that our content comes from. They include the <strong>Rijksmuseum</strong>
+{% blocktrans %}that our content comes from. They include the
+<strong>Rijksmuseum</strong>
 in Amsterdam, the <strong>British Library</strong> in London and the
 <strong>Louvre</strong> in Paris.{% endblocktrans %}
 </p>
@@ -125,7 +126,7 @@ European Commissioner for Information Society and Media{% endblocktrans %}.
 {% trans "as part of the" %}
 <a target="_blank"
 href="http://ec.europa.eu/information_society/activities/digital_libraries/index_en.htm">{% trans "i2010  policy" %}</a>.
-{% blocktrans %}Originally SUNE known as the European digital library network &ndash; EDLnet  &ndash;&nbsp;
+{% blocktrans %}Originally known as the European digital library network &ndash; EDLnet  &ndash;&nbsp;
 it is a partnership  of 100 representatives of heritage and knowledge
 organisations and IT  experts from throughout Europe.
 They contribute to the Work Packages that are solving the technical and
