#90 moved pro_file.html
git-svn-id: https://www.europeanalabs.eu/svn/europeana/trunk@971 3c7f12e8-d31e-4037-9ce9-7a8ea9e2c7c8

--- a/tools/multilingo/apps/multi_lingo/templates/pages/about_us.html
+++ b/tools/multilingo/apps/multi_lingo/templates/pages/about_us.html
@@ -39,10 +39,10 @@ Java Developer</a> and
 
 <p>
 {% trans "Here is a" %}
-<a href="partners.html">{% trans "list of the organisations" %}</a>
+{% trans "#[about_us: paragraph Here is a - prefix for partners.html]" %}<a href="partners.html">{% trans "list of the organisations" %}</a>
 {% blocktrans %}that our content comes from. They include the <strong>Rijksmuseum</strong>
 in Amsterdam, the <strong>British Library</strong> in London and the
-<strong>Louvre</strong> in Paris.{% endblocktrans %}
+<strong>Louvre</strong> in Paris{% endblocktrans %}.
 </p>
 
 <p>
