#90 hopefully done for now - implementing on sandbox07
git-svn-id: https://www.europeanalabs.eu/svn/europeana/trunk@978 3c7f12e8-d31e-4037-9ce9-7a8ea9e2c7c8

--- a/tools/multilingo/apps/multi_lingo/templates/pages/about_us.html
+++ b/tools/multilingo/apps/multi_lingo/templates/pages/about_us.html
@@ -80,7 +80,7 @@ launch in 2010 with links to over 10 million digital objects{% endblocktrans %}.
 <li>{% trans "Getting in" %}
     <a  href="#contact">{% trans "contact" %}</a> {% trans "with the Europeana team" %}</li>
 <li>{% trans "To be added to the" %} <a href="#pressListContact">{% trans "press list" %}</a></li>
-<li>{% trans "The" %}
+<li>{% trans "#The[about_us: paragraph More about last list item - prefix for enews.php]" %}
     <a  href="http://dev.europeana.eu/enews.php" target="_blank">{% trans "e-news" %}</a>
     {% trans "to keep you in touch with developments" %}</li>
 </ul>
