--- a/portal-full/src/main/webapp/css/common.css
+++ b/portal-full/src/main/webapp/css/common.css
@@ -325,7 +325,11 @@ input.error
 	font-weight:400;
 	text-decoration:underline;
 }
-
+#search span {
+    color: #000;
+    font-size: .85em;
+    margin-left: 10px; 
+}
 /* footer
 =======================*/
 #ft ul
