#510 Refine search implementation Extra functionality "With Facets" left out due to url encoding problems
git-svn-id: https://www.europeanalabs.eu/svn/europeana/trunk@1381 3c7f12e8-d31e-4037-9ce9-7a8ea9e2c7c8

--- a/portal-full/src/main/webapp/css/common.css
+++ b/portal-full/src/main/webapp/css/common.css
@@ -291,7 +291,7 @@ input.error
 
 }
 
-#search #search_advanced
+#search #search_advanced, #search #search_refine
 {
 	background:#eee;
 	border:1px solid #ccc;
@@ -311,6 +311,13 @@ input.error
 	left:150px;
 	position:absolute;
 	top:0;
+}
+
+#search #search_refine.search_result
+{
+	left:180px;
+	position:absolute;
+	top:40px;
 }
 
 #tbl_adv_search td
