sipmanager accept missing content-length
git-svn-id: https://www.europeanalabs.eu/svn/europeana/trunk@1567 3c7f12e8-d31e-4037-9ce9-7a8ea9e2c7c8

--- a/tools/sip_manager/sip_manager/apps/plug_uris/templates/plug_uris/uri_list.html
+++ b/tools/sip_manager/sip_manager/apps/plug_uris/templates/plug_uris/uri_list.html
@@ -1,10 +1,10 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <h2>Publishers</h2>
+    <h2>Uri items</h2>
     <ul>
-        {% for publisher in object_list %}
-            <li>{{ publisher.name }}</li>
+        {% for uri in queryset %}
+            <li>{{ uri.status }}</li>
         {% endfor %}
     </ul>
 {% endblock %}
