sipmanager statistics pages
git-svn-id: https://www.europeanalabs.eu/svn/europeana/trunk@1605 3c7f12e8-d31e-4037-9ce9-7a8ea9e2c7c8

--- a/tools/sip_manager/sip_manager/apps/plug_uris/templates/plug_uris/problems.html
+++ b/tools/sip_manager/sip_manager/apps/plug_uris/templates/plug_uris/problems.html
@@ -3,15 +3,6 @@
 {% block content %}
 
 <h2>Problems</h2>
-  <table border="1">
-    <th>Name</th>
-    <th>Count</th>
-    {% for key, problem in problems.items %}
-      <tr>
-        <td>{{ key }}</td>
-        <td>{{ problem.count }}</td>
-      </tr>
-    {% endfor %}
-    </table>
+{% include "plug_uris/snippets/tbl_errors_by_kind.html" %}
 
 {% endblock %}
