sipmanager statistics pages updates
git-svn-id: https://www.europeanalabs.eu/svn/europeana/trunk@1610 3c7f12e8-d31e-4037-9ce9-7a8ea9e2c7c8

--- a/tools/sip_manager/sip_manager/apps/plug_uris/templates/plug_uris/statistics.html
+++ b/tools/sip_manager/sip_manager/apps/plug_uris/templates/plug_uris/statistics.html
@@ -1,6 +1,19 @@
 {% extends "base.html" %}
 
+{% block extrahead %}
+<script type="text/javascript" src="/media/js/jquery.min.js"></script>
+<script type="text/javascript">
+   // we will add our javascript code here
+
+
+
+</script>
+{% endblock %}
+
 {% block content %}
+
+<a href="">Link</a>
+
 
 <h2>Summary</h2>
 
@@ -12,3 +25,7 @@ Images with problems: {{ summary.imgs_bad }}<br>
 {% include "plug_uris/snippets/tbl_stats_by_source.html" %}
 
 {% endblock %}
+
+
+{% comment %}
+{% endcomment %}
