--- a/tools/sip_manager/sip_manager/templates/base.html
+++ b/tools/sip_manager/sip_manager/templates/base.html
@@ -1,5 +1,7 @@
 <html>
-<head></head>
+<head>
+{% block extrahead %}{% endblock %}
+</head>
 <body>
 <h1>Tests: {% block title %}{% endblock %}</h1>
 {% block content %}
