sipmanager statistics pages
git-svn-id: https://www.europeanalabs.eu/svn/europeana/trunk@1634 3c7f12e8-d31e-4037-9ce9-7a8ea9e2c7c8

--- a/tools/sip_manager/sip_manager/templates/base.html
+++ b/tools/sip_manager/sip_manager/templates/base.html
@@ -1,9 +1,9 @@
 <html>
 <head>
+<title>{% block title %}No title given{% endblock %}</title>
 {% block extrahead %}{% endblock %}
 </head>
 <body>
-<h1>Tests: {% block title %}{% endblock %}</h1>
 {% block content %}
 {% endblock %}
 </body>
