--- a/tools/sip_manager/sip_manager/apps/plug_uris/templates/plug_uris/stats_uri_source.html
+++ b/tools/sip_manager/sip_manager/apps/plug_uris/templates/plug_uris/stats_uri_source.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-<{% block title %}Statistics{% endblock %}
+{% block title %}Stats by urisource{% endblock %}
 
 {% block content %}
 
@@ -10,8 +10,9 @@ Images done: {{ summary.imgs_ok }}<br>
 Images waiting to be processed: {{ summary.imgs_waiting }}<br>
 Images with problems: {{ summary.imgs_bad }}<br>
 
-<h3><a href="{% url uri_stats_req %}">Grouped by request</a>
-<h3><a href="{% url uri_stats %}">Grouped by uri source (webserver)</a>
+<h2>Grouped by uri source</h2>
+
+{% include "plug_uris/snippets/tbl_stats_by_source.html" %}
 
 {% endblock %}
 
