sipmanager web stats update
git-svn-id: https://www.europeanalabs.eu/svn/europeana/trunk@1637 3c7f12e8-d31e-4037-9ce9-7a8ea9e2c7c8

--- a/tools/sip_manager/sip_manager/apps/plug_uris/templates/plug_uris/stats_all_requests.html
+++ b/tools/sip_manager/sip_manager/apps/plug_uris/templates/plug_uris/stats_all_requests.html
@@ -11,10 +11,14 @@
 <table border="1">
       <th>Name</th>
       <th>Count</th>
+      <th>Verified</th>
+      <th>Bad images</th>
     {% for req_info in requests %}
     <tr>
         <td><a href="{% url uri_stats_by_req req_info.request.pk %}">{{ req_info.request }}</a></td>
         <td>{{ req_info.count }}</td>
+        <td>{{ req_info.itm_ok }}</td>
+        <td>{{ req_info.itm_bad }}</td>
     </tr>
     {% endfor %}
 </table>
