sipmanager web stats update
git-svn-id: https://www.europeanalabs.eu/svn/europeana/trunk@1638 3c7f12e8-d31e-4037-9ce9-7a8ea9e2c7c8

--- a/tools/sip_manager/sip_manager/apps/plug_uris/templates/plug_uris/stats_by_request.html
+++ b/tools/sip_manager/sip_manager/apps/plug_uris/templates/plug_uris/stats_by_request.html
@@ -37,6 +37,22 @@
     {% endfor %}
 </table>
 
+<h3>Grouped by error</h3>
+
+<table border="1">
+      <th>Error</th>
+      <th>Count</th>
+    {% for error, count in err_by_reason.items %}
+    <tr>
+        <td>{{ error }}</td>
+        <td>{{ count }}</td>
+    </tr>
+    {% endfor %}
+</table>
+
+
+
+
 
 
 
