sipmanager restructured load limiter code
git-svn-id: https://www.europeanalabs.eu/svn/europeana/trunk@1653 3c7f12e8-d31e-4037-9ce9-7a8ea9e2c7c8

--- a/tools/sip_manager/sip_manager/apps/plug_uris/templates/plug_uris/stats_by_request.html
+++ b/tools/sip_manager/sip_manager/apps/plug_uris/templates/plug_uris/stats_by_request.html
@@ -9,44 +9,50 @@
 <h2>{{ request }}</h2>
 
 
-<h3>Grouped by mimetype</h3>
-<table border="1">
-      <th>mimetype</th>
-      <th>Good</th>
-      <th>Bad</th>
+{% if mime_results %}
+  <h3>Grouped by mimetype</h3>
+  <table border="1">
+    <th>mimetype</th>
+    <th>Good</th>
+    <th>Bad</th>
     {% for lbl, mime_result in mime_results.items %}
-    <tr>
+      <tr>
         <td>{{ lbl }}</td>
         <td>{{ mime_result.ok }}</td>
         <td>{{ mime_result.bad }}</td>
-    </tr>
+      </tr>
     {% endfor %}
-</table>
+  </table>
+{% endif %}
 
 
-<h3>Grouped by error</h3>
-<table border="1">
-      <th>Error</th>
-      <th>Count</th>
+
+{% if err_by_reason %}
+  <h3>Grouped by error</h3>
+  <table border="1">
+    <th>Error</th>
+    <th>Count</th>
     {% for error, count in err_by_reason.items %}
-    <tr>
+      <tr>
         <td>{{ error }}</td>
         <td>{{ count }}</td>
-    </tr>
+      </tr>
     {% endfor %}
-</table>
+  </table>
+{% endif %}
+
 
 
 <h3>Grouped by webserver</h3>
 <table border="1">
-      <th>name or ip</th>
-      <th>items</th>
-    {% for webserver in webservers %}
+  <th>name or ip</th>
+  <th>items</th>
+  {% for webserver in webservers %}
     <tr>
-        <td>{{ webserver.0 }}</td>
-        <td>{{ webserver.2 }}</td>
+      <td>{{ webserver.0 }}</td>
+      <td>{{ webserver.2 }}</td>
     </tr>
-    {% endfor %}
+  {% endfor %}
 </table>
 
 
