fixed div structure login.ftl and error messages haning "wideget" class ;-p

--- a/portal-lite/src/main/webapp/css/layout-common.css
+++ b/portal-lite/src/main/webapp/css/layout-common.css
@@ -31,6 +31,7 @@ a:hover {
 #main {
     background: transparent;
     overflow: hidden;
+    /*min-height: 500px;*/
 }
 
 .page {
@@ -678,4 +679,7 @@ button.fg-button, input.fg-button {
 }
 #footer #delving{
     float: right;
+}
+#login-div, #register-div, #request-password {
+    margin-top: 20px;
 }
