--- a/tools/multilingo/apps/multi_lingo/templates/overview.html
+++ b/tools/multilingo/apps/multi_lingo/templates/overview.html
@@ -15,5 +15,8 @@
 <h3>Manage translations</h3>
 To work with translations please go to <a href="/rosetta/pick/">here</a>
 
+<h3>Export</h3>
+Download a tarball for usage on a Europeana portal
+<a href="{% url ml-export %}">ss</a>
 </body>
 </html>
