sipmanager changed statistics
git-svn-id: https://www.europeanalabs.eu/svn/europeana/trunk@1829 3c7f12e8-d31e-4037-9ce9-7a8ea9e2c7c8

--- a/tools/sip_manager/sip_manager/apps/plug_uris/templates/plug_uris/stats_by_request.html
+++ b/tools/sip_manager/sip_manager/apps/plug_uris/templates/plug_uris/stats_by_request.html
@@ -15,9 +15,9 @@
     <th>mimetype</th>
     <th>Good</th>
     <th>Bad</th>
-    {% for lbl, mime_result in mime_results.items %}
+    {% for mime_result in mime_results %}
       <tr>
-        <td>{{ lbl }}</td>
+        <td>{{ mime_result.name }}</td>
         <td>{{ mime_result.ok }}</td>
         <td>{{ mime_result.bad }}</td>
       </tr>
