sipmanager faster per webserver stats
git-svn-id: https://www.europeanalabs.eu/svn/europeana/trunk@1838 3c7f12e8-d31e-4037-9ce9-7a8ea9e2c7c8

--- a/tools/sip_manager/sip_manager/apps/plug_uris/templates/plug_uris/stats_uri_source.html
+++ b/tools/sip_manager/sip_manager/apps/plug_uris/templates/plug_uris/stats_uri_source.html
@@ -4,6 +4,8 @@
 
 {% block content %}
 
+<a href="{% url uri_stats_idx %}">Statistics</a>
+
 <h2>Summary</h2>
 
 Images done: {{ summary.imgs_ok }}<br>
