sipmanager removed year display in progress monitor
git-svn-id: https://www.europeanalabs.eu/svn/europeana/trunk@1886 3c7f12e8-d31e-4037-9ce9-7a8ea9e2c7c8

--- a/tools/sip_manager/sip_manager/apps/sipmanager/templates/sipmanager/show_procs.html
+++ b/tools/sip_manager/sip_manager/apps/sipmanager/templates/sipmanager/show_procs.html
@@ -20,8 +20,8 @@
         <td>{{ proc.task_label }}</td>
         <td>{{ proc.task_progress }}</td>
         <td>{{ proc.task_eta }}</td>
-        <td>{{ proc.time_created|date:'y-m-d' }} {{ proc.time_created|time:'H:i:s' }}</td>
-        <td>{{ proc.last_change|date:'y-m-d' }} {{ proc.last_change|time:'H:i:s' }}</td>
+        <td>{{ proc.time_created|date:'m-d' }} {{ proc.time_created|time:'H:i:s' }}</td>
+        <td>{{ proc.last_change|date:'m-d' }} {{ proc.last_change|time:'H:i:s' }}</td>
     </tr>
     {% endfor %}
 </table>
