sipmanager - forgot the template...
git-svn-id: https://www.europeanalabs.eu/svn/europeana/trunk@1890 3c7f12e8-d31e-4037-9ce9-7a8ea9e2c7c8

--- a/tools/sip_manager/sip_manager/apps/plug_uris/templates/plug_uris/stats_all_requests.html
+++ b/tools/sip_manager/sip_manager/apps/plug_uris/templates/plug_uris/stats_all_requests.html
@@ -14,6 +14,7 @@
       <th>Waiting</th>
       <th>Verified</th>
       <th>Bad images</th>
+      <th>Ratio</th>
     {% for req_info in requests %}
     <tr>
         <td><a href="{% url uri_stats_by_req req_info.request.pk %}">{{ req_info.request }}</a></td>
@@ -21,6 +22,7 @@
         <td>{{ req_info.waiting }}</td>
         <td>{{ req_info.ok }}</td>
         <td>{{ req_info.bad }}</td>
+        <td>{{ req_info.ratio }}</td>
     </tr>
     {% endfor %}
 </table>
