sipmanager fixed a template
git-svn-id: https://www.europeanalabs.eu/svn/europeana/trunk@1899 3c7f12e8-d31e-4037-9ce9-7a8ea9e2c7c8

--- a/tools/sip_manager/sip_manager/apps/plug_uris/templates/plug_uris/statistics.html
+++ b/tools/sip_manager/sip_manager/apps/plug_uris/templates/plug_uris/statistics.html
@@ -11,7 +11,7 @@ Images waiting to be processed: {{ summary.imgs_waiting }}<br>
 Images with problems: {{ summary.imgs_bad }}<br>
 
 <h3><a href="{% url uri_stats_req %}">Grouped by request</a></h3>
-<h3><a href="{% url uri_stats %}">Grouped by uri source (webserver)</a></h3> - warning this is rather slow...
+<h3><a href="{% url uri_stats %}">Grouped by uri source (webserver)</a> - warning this is rather slow.,,</h3>
 
 {% endblock %}
 
