sipmanager error display
git-svn-id: https://www.europeanalabs.eu/svn/europeana/trunk@1907 3c7f12e8-d31e-4037-9ce9-7a8ea9e2c7c8

--- a/tools/sip_manager/sip_manager/apps/plug_uris/templates/plug_uris/stats_by_request.html
+++ b/tools/sip_manager/sip_manager/apps/plug_uris/templates/plug_uris/stats_by_request.html
@@ -20,7 +20,7 @@
       <tr>
         <td>{{ mime_result.name }}</td>
         <td>{{ mime_result.ok }}</td>
-        <td>{{ mime_result.bad }}</td>
+        <td><a href="{% url uri_bad_by_req request.pk mime_result.mime_url %}">{{ mime_result.bad }}</a></td>
         <td>{{ mime_result.ratio }}</td>
       </tr>
     {% endfor %}
@@ -29,15 +29,15 @@
 
 
 
-{% if err_by_reason %}
+{% if err_by_reasons %}
   <h3>Grouped by error</h3>
   <table border="1">
     <th>Error</th>
     <th>Count</th>
-    {% for error, count in err_by_reason.items %}
+    {% for err_by_reason in err_by_reasons %}
       <tr>
-        <td>{{ error }}</td>
-        <td>{{ count }}</td>
+        <td>{{ err_by_reason.err_msg }}</td>
+        <td><a href="{% url uri_bad_by_req_err request.pk err_by_reason.err_code %}">{{ err_by_reason.count }}</a></td>
       </tr>
     {% endfor %}
   </table>
